--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
   <!--[if lt IE 8]>
@@ -19,5 +20,6 @@
     __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
   </script>
   <script type="text/javascript" src="assets/main.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
 </html>
