feat(mixin): Adding Google Drive Mixin

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <script>
     __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
   </script>
+  <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   <script type="text/javascript" src="assets/main.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
